# Pombo-Coop

./: .gitignore  AGENT_ORCHESTRATOR_RESEARCH.md  AGENT_ORCHESTRATOR_TASKS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
core/orchestrator/: Cargo.toml
core/orchestrator/src/: config.rs  lib.rs
docs/: architecture.md  coding-standards.md  configuration.md
shared/schema/: Cargo.toml
shared/schema/src/: lib.rs
src/: config.rs  main.rs  provider.rs  theme.rs
src/app/: mod.rs
src/input/: mod.rs
src/ui/: mod.rs
src/ui/components/: mod.rs  onboarding.rs  pane_chrome.rs  panels.rs  status_bar.rs
ui/: dev.sh
ui/gpui_app/: Cargo.toml
ui/gpui_app/src/: color_system.rs  main.rs  mock_data.rs  shell.rs  ui_state.rs
ui/gpui_app/src/shell/: buttons.rs  chrome.rs  diff_panel.rs  left_panel.rs  right_panel.rs  textarea.rs  tooltip.rs
