[workspace]
members = [
  "ui/gpui_app",
  "core/orchestrator",
  "shared/schema",
]
default-members = ["ui/gpui_app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
tempfile = "3"
dirs = "5"
