[package]
name = "agent_manager_ui"
version.workspace = true
edition.workspace = true

[dependencies]
agent_manager_shared = { path = "../../shared/schema" }
gpui = { git = "https://github.com/zed-industries/zed", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["runtime_shaders", "font-kit"] }
core-text = "=21.0.0"
serde.workspace = true
toml.workspace = true
